--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     - '/app/backend/node_modules'
     environment:
     - CHOKIDAR_USEPOLLING=true
+    - REACT_APP_MONGO_URL=mongodb://mongo:27017
+    - REACT_APP_HOSTNAME=http://localhost:4000
     stdin_open: true
     tty: true
   mongo:
