--- a/openshift/oc-build-template.yml
+++ b/openshift/oc-build-template.yml
@@ -9,12 +9,12 @@ spec:
   source:
     type: Git
     git:
-      uri: https://github.com/melosaiyan/react_mernstack_local.git
+      uri: 'https://github.com/melosaiyan/react_mernstack_local.git'
       ref: openshift
   output:
     to:
-      kind: DockerImage
-      name: mernstack:latest
+      kind: ImageStreamTag
+      name: 'mernstack-test:latest' # Matches name in imagestream-template
   runPolicy: Serial
   strategy:
     type: Docker
